CREATE DATABASE IF NOT EXISTS smart_library CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci;
USE smart_library;

CREATE TABLE roles (
    id INT AUTO_INCREMENT PRIMARY KEY,
    role_name VARCHAR(30) NOT NULL UNIQUE,
    description VARCHAR(255)
);

CREATE TABLE users (
    id INT AUTO_INCREMENT PRIMARY KEY,
    full_name VARCHAR(120) NOT NULL,
    email VARCHAR(150) NOT NULL UNIQUE,
    password_hash VARCHAR(128) NOT NULL,
    role_name VARCHAR(30) NOT NULL,
    active BOOLEAN NOT NULL DEFAULT TRUE,
    phone VARCHAR(30),
    address VARCHAR(255),
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_users_role FOREIGN KEY (role_name) REFERENCES roles(role_name)
);

CREATE TABLE categories (
    id INT AUTO_INCREMENT PRIMARY KEY,
    name VARCHAR(80) NOT NULL UNIQUE,
    description VARCHAR(255)
);

CREATE TABLE books (
    id INT AUTO_INCREMENT PRIMARY KEY,
    title VARCHAR(180) NOT NULL,
    author VARCHAR(140) NOT NULL,
    isbn VARCHAR(30) NOT NULL UNIQUE,
    category_name VARCHAR(80) NOT NULL,
    publication_year INT NOT NULL,
    quantity INT NOT NULL CHECK (quantity > 0),
    available_copies INT NOT NULL CHECK (available_copies >= 0),
    shelf_location VARCHAR(50) NOT NULL,
    status VARCHAR(30) NOT NULL DEFAULT 'Available',
    cover_image_path VARCHAR(500),
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_books_category FOREIGN KEY (category_name) REFERENCES categories(name),
    CONSTRAINT chk_available_quantity CHECK (available_copies <= quantity)
);

CREATE TABLE borrowings (
    id INT AUTO_INCREMENT PRIMARY KEY,
    book_id INT NOT NULL,
    member_id INT NOT NULL,
    issued_by INT,
    borrow_date DATE NOT NULL,
    due_date DATE NOT NULL,
    return_date DATE,
    status VARCHAR(30) NOT NULL,
    CONSTRAINT fk_borrowings_book FOREIGN KEY (book_id) REFERENCES books(id),
    CONSTRAINT fk_borrowings_member FOREIGN KEY (member_id) REFERENCES users(id),
    CONSTRAINT fk_borrowings_staff FOREIGN KEY (issued_by) REFERENCES users(id),
    CONSTRAINT uq_active_borrowing UNIQUE (book_id, member_id, return_date)
);

CREATE TABLE reservations (
    id INT AUTO_INCREMENT PRIMARY KEY,
    book_id INT NOT NULL,
    member_id INT NOT NULL,
    reservation_date DATE NOT NULL,
    status VARCHAR(30) NOT NULL DEFAULT 'Waiting',
    CONSTRAINT fk_reservations_book FOREIGN KEY (book_id) REFERENCES books(id),
    CONSTRAINT fk_reservations_member FOREIGN KEY (member_id) REFERENCES users(id)
);

CREATE TABLE fines (
    id INT AUTO_INCREMENT PRIMARY KEY,
    borrowing_id INT NOT NULL,
    member_id INT NOT NULL,
    amount DECIMAL(10,2) NOT NULL,
    reason VARCHAR(255) NOT NULL,
    status VARCHAR(30) NOT NULL DEFAULT 'Unpaid',
    created_date DATE NOT NULL,
    CONSTRAINT fk_fines_borrowing FOREIGN KEY (borrowing_id) REFERENCES borrowings(id),
    CONSTRAINT fk_fines_member FOREIGN KEY (member_id) REFERENCES users(id)
);

CREATE TABLE notifications (
    id INT AUTO_INCREMENT PRIMARY KEY,
    user_id INT,
    title VARCHAR(120) NOT NULL,
    message VARCHAR(500) NOT NULL,
    type VARCHAR(30) NOT NULL,
    is_read BOOLEAN NOT NULL DEFAULT FALSE,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_notifications_user FOREIGN KEY (user_id) REFERENCES users(id)
);

CREATE TABLE activity_logs (
    id INT AUTO_INCREMENT PRIMARY KEY,
    actor_id INT,
    action VARCHAR(80) NOT NULL,
    details VARCHAR(500),
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_logs_actor FOREIGN KEY (actor_id) REFERENCES users(id)
);

CREATE TABLE library_settings (
    setting_key VARCHAR(80) PRIMARY KEY,
    setting_value VARCHAR(255) NOT NULL
);

INSERT INTO roles(role_name, description) VALUES
('ADMIN', 'Full system administration'),
('LIBRARIAN', 'Catalog and circulation workflow'),
('MEMBER', 'Student/member self-service');

INSERT INTO categories(name, description) VALUES
('HCI', 'Human Computer Interaction'),
('Software Engineering', 'Engineering and design practices'),
('Database', 'Database systems'),
('Programming', 'Programming languages and practices');

INSERT INTO library_settings(setting_key, setting_value) VALUES
('MAX_BORROWED_BOOKS', '3'),
('DEFAULT_BORROW_DAYS', '14'),
('DAILY_FINE', '2.00');

-- Passwords are SHA-256 hashes generated by PasswordUtil.
INSERT INTO users(full_name, email, password_hash, role_name) VALUES
('Admin Sofia', 'admin@library.edu', '240be518fabd2724ddb6f04eeb1da5967448d7e831c08c8fa822809f74c720a9', 'ADMIN'),
('Librarian Omar', 'librarian@library.edu', '6518454a49ab2912238b510b2221f0fc1ce404986d3fb94bb34311ff6069d467', 'LIBRARIAN'),
('Student Lina', 'student@library.edu', '703b0a3d6ad75b649a28adde7d83c6251da457549263bc7ff45ec709b0a8448b', 'MEMBER');

INSERT INTO books(title, author, isbn, category_name, publication_year, quantity, available_copies, shelf_location, status) VALUES
('Designing Interfaces', 'Jenifer Tidwell', '9781492051961', 'HCI', 2020, 5, 5, 'A-12', 'Available'),
('Clean Code', 'Robert C. Martin', '9780132350884', 'Software Engineering', 2008, 4, 4, 'B-04', 'Available'),
('Database System Concepts', 'Silberschatz, Korth', '9780078022159', 'Database', 2019, 3, 3, 'C-02', 'Available'),
('The Design of Everyday Things', 'Don Norman', '9780465050659', 'HCI', 2013, 6, 6, 'A-07', 'Available');
